2.1.15
 * Set default streaming_socket_timeout_in_ms to 24 hours (CASSANDRA-11840)
 * Do not consider local node a valid source during replace (CASSANDRA-11848)
 * Avoid holding SSTableReaders for duration of incremental repair (CASSANDRA-11739)
 * Add message dropped tasks to nodetool netstats (CASSANDRA-11855)
 * Don't compute expensive MaxPurgeableTimestamp until we've verified there's an 
   expired tombstone (CASSANDRA-11834)
 * Fix paging on DISTINCT queries repeats result when first row in partition changes 
   (CASSANDRA-11679)
 * Add option to disable use of severity in DynamicEndpointSnitch (CASSANDRA-11737)
 * cqlsh COPY FROM fails for null values with non-prepared statements (CASSANDRA-11631)
 * Make cython optional in pylib/setup.py (CASSANDRA-11630)
 * Change order of directory searching for cassandra.in.sh to favor local one 
   (CASSANDRA-11628)
 * cqlsh COPY FROM fails with []{} chars in UDT/tuple fields/values (CASSANDRA-11633)
 * clqsh: COPY FROM throws TypeError with Cython extensions enabled (CASSANDRA-11574)
 * cqlsh: COPY FROM ignores NULL values in conversion (CASSANDRA-11549)
 * Validate levels when building LeveledScanner to avoid overlaps with orphaned 
   sstables (CASSANDRA-9935)


2.1.14
 * Start L0 STCS-compactions even if there is a L0 -> L1 compaction
   going (CASSANDRA-10979)
 * (cqlsh) Fix potential COPY deadlock when parent process is terminating child
   processes (CASSANDRA-11505)
 * Replace sstables on DataTracker before marking them as non-compacting during anti-compaction (CASSANDRA-11548)
 * Checking if an unlogged batch is local is inefficient (CASSANDRA-11529)
 * Fix paging for COMPACT tables without clustering columns (CASSANDRA-11467)
 * Fix out-of-space error treatment in memtable flushing (CASSANDRA-11448)
 * Backport CASSANDRA-10859 (CASSANDRA-11415)
 * COPY FROM fails when importing blob (CASSANDRA-11375)
 * Backport CASSANDRA-10679 (CASSANDRA-9598)